loadbalancer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loadbalancer-service
  namespace: loadbalancer-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: loadbalancer-service
