loadbalancer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loadbalancer-service
  namespace: loadbalancer-service
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /loadbalancer-service(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: loadbalancer-service
            port:
              number: 80
